src/components/LeftSideBar/_leftSideBar.scss
.sidebar {
  position: relative;
  height: 100vh;
  min-width: 200px;
}

.side-drawer .left-sidebar {

  &__fixed_wrapper {
    top: 65px;
    width: 100%;
  }
}

.left-sidebar {
  position: relative;
  top: 0px;
  box-sizing: border-box;
  margin: 0px;
  width: 100%;
  height: 100vh;
  font-family: 'DIN Pro';
  border-right: 1px solid #E4E4E4;

  &__fixed_wrapper {
    overflow-y: scroll;
    position: fixed;
    width: 16.666667%;
    height: 100vh;

    @media (min-width: 1178px)  {
      background: #f8f8f8;
      z-index: 20;
    }
  }
  
  &__scrollable_wrapper {
    overflow-y: scroll;
    height: 100%;
    position: relative;
    top: 108px;
    min-width: 200px;   
  }

  .logout-button {
    @import 'responsiveness';
  }
}

